--- a/TAF/TAF/TAF.csproj
+++ b/TAF/TAF/TAF.csproj
@@ -52,18 +52,36 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="BusinessObject\User.cs" />
     <Compile Include="Extention\WDExtention.cs" />
     <Compile Include="Page\AccountsPage.cs" />
+    <Compile Include="Page\ForwardPage.cs" />
     <Compile Include="Page\InBoxPage.cs" />
     <Compile Include="Page\LoginPage.cs" />
+    <Compile Include="Page\Message.cs" />
+    <Compile Include="Page\SettingPage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Steps\AccountsPageStep.cs" />
+    <Compile Include="Steps\ForwardPageStep.cs" />
     <Compile Include="Steps\LoginPageStep.cs" />
     <Compile Include="Steps\InBoxPageStep.cs" />
+    <Compile Include="Steps\MessageStep.cs" />
+    <Compile Include="Steps\SettingPageStep.cs" />
+    <Compile Include="Steps\Step.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <COMReference Include="AutoItX3Lib">
+      <Guid>{F8937E53-D444-4E71-9275-35B64210CC3B}</Guid>
+      <VersionMajor>1</VersionMajor>
+      <VersionMinor>0</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>tlbimp</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
