--- a/CoreTAF/CoreTAF/CoreTAF.csproj
+++ b/CoreTAF/CoreTAF/CoreTAF.csproj
@@ -50,14 +50,16 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Elements\Href.cs" />
+    <Compile Include="Elements\Link.cs" />
     <Compile Include="Elements\Button.cs" />
     <Compile Include="Elements\Element.cs" />
     <Compile Include="Elements\Label.cs" />
-    <Compile Include="Elements\RadioButton .cs" />
+    <Compile Include="Elements\CheckBox.cs" />
+    <Compile Include="Elements\RadioButton.cs" />
     <Compile Include="Elements\TextBox .cs" />
     <Compile Include="Page\BasePage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utility\Attachment\Attachment.cs" />
     <Compile Include="Utility\Logger\Logger.cs" />
     <Compile Include="Utility\WebDriver\Driver.cs" />
   </ItemGroup>
@@ -67,6 +69,17 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Tests\" />
+  </ItemGroup>
+  <ItemGroup>
+    <COMReference Include="AutoItX3Lib">
+      <Guid>{F8937E53-D444-4E71-9275-35B64210CC3B}</Guid>
+      <VersionMajor>1</VersionMajor>
+      <VersionMinor>0</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>tlbimp</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
