--- a/TAFCORE/FTP/FTP.csproj
+++ b/TAFCORE/FTP/FTP.csproj
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
@@ -49,9 +53,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BusinessObject\Serves.cs" />
     <Compile Include="BusinessObject\User.cs" />
     <Compile Include="Page\AccountsPage.cs" />
     <Compile Include="Page\ForwardPage.cs" />
+    <Compile Include="Page\GeneralPage.cs" />
     <Compile Include="Page\ImportantPage.cs" />
     <Compile Include="Page\InBoxPage.cs" />
     <Compile Include="Page\LoginPage.cs" />
@@ -60,8 +66,14 @@
     <Compile Include="Page\ThemesPage.cs" />
     <Compile Include="Page\TrashPage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Resource1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resource1.resx</DependentUpon>
+    </Compile>
     <Compile Include="Steps\AccountsPageStep.cs" />
     <Compile Include="Steps\ForwardPageStep.cs" />
+    <Compile Include="Steps\GeneralPageStep.cs" />
     <Compile Include="Steps\ImportantPageStepcs.cs" />
     <Compile Include="Steps\InBoxPageStep.cs" />
     <Compile Include="Steps\LoginPageStep.cs" />
@@ -73,6 +85,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resource1.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resource1.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
